# FreeCT

./: CMakeLists.txt  Jenkinsfile  README.md
applications/: CMakeLists.txt
applications/fct_icd/: CMakeLists.txt
applications/fct_icd/resources/: empty_prm.yaml  sample_prm.yaml
applications/fct_icd/src/: generate_system_matrix.cpp  generate_system_matrix.h  generate_system_matrix_ffs.cpp  generate_system_matrix_ffs.h  icd_iteration.cpp  icd_iteration.h  initialize_recon_volume.cpp  initialize_recon_volume.h  interp.h  main.cpp  parse_config.cpp  parse_config.h  penalties.cpp  penalties.h  recon_structs.h  rotate_slices.cpp  rotate_slices.h  setup.cpp  setup.h  spinner.h
applications/fct_read_util/: CMakeLists.txt  README.md  main.cpp
applications/fct_wfbp/: CMakeLists.txt
applications/fct_wfbp/include/: ReconstructionMachine.h  backproject.cuh  backproject.h  backproject_cpu.h  ctbb_macros.h  cuda_kernels.cuh  finalize_image_stack.cuh  finalize_image_stack.h  finalize_image_stack_cpu.h  gpu_error_check.h  interp.h  parse_config.h  preprocessing.cuh  preprocessing.h  rebin.h  rebin_filter.cuh  rebin_filter.h  rebin_filter_cpu.h  recon_structs.h  setup.h  util.h
applications/fct_wfbp/resources/: config_dict.txt  file_type_list.txt  ramp.m
applications/fct_wfbp/resources/filters/: f_672_exp.txt  f_672_medium.txt  f_672_smooth.txt  f_736_medium.txt  f_736_sharp.txt  f_736_smooth.txt  f_920_sharp.txt
applications/fct_wfbp/resources/installers/: fct_install_ubuntu
applications/fct_wfbp/resources/patches/: fftw3.h
applications/fct_wfbp/resources/scanners/: definitionas.scanner  force.scanner  noo.scanner  sensation64.scanner
applications/fct_wfbp/src/: ReconstructionMachine.cu  backproject.cu  backproject_cpu.cu  finalize_image_stack.cu  finalize_image_stack_cpu.cu  interp.cu  main.cpp  main.cu  makefile  parse_config.cpp  parse_config.cu  preprocessing.cu  rebin.cu  rebin_filter.cu  rebin_filter_cpu.cu  setup.cu  util.cu
applications/tests/: CMakeLists.txt  FreeCTDataSet_test.cpp
modules/: CMakeLists.txt
modules/fct_read/: CMakeLists.txt
modules/fct_read/include/: DicomDataSet.h  FreeCTRead.h  RawDataSet.h
modules/fct_read/include/fct/: DicomDataSet.h  FreeCTDataSet.h  RawDataSet.h
modules/fct_read/src/: DicomDataSet.cpp  FreeCTDataSet.cpp  RawDataSet.cpp
resources/: multipass-dev-build.yaml
